--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maruti.robopet.com",
   "version": "1.0.0",
-  "displayName": "robopet",
+  "displayName": "roboPet",
   "cordova": {
     "platforms": [
       "android"
